# patched-conic-planner-2d

./: Cargo.toml  README.md  profile.json
cases/: 1.json
cases/1/: entities.json
cases/collision-with-moon/: encounters.json  objects.json
cases/ellipse-encounter-with-escaping-moon/: encounters.json
cases/encounter-with-earth/: encounters.json  objects.json
cases/encounter-with-earth-and-moon/: encounters.json  objects.json
cases/escape-from-earth/: encounters.json  objects.json
cases/escape-from-moon-1/: encounters.json
cases/escape-from-moon-2/: encounters.json
cases/hyperbola-encounter-with-escaping-moon/: encounters.json
cases/hyperbolic-moon-encounter-1/: encounters.json  objects.json
cases/insanity-1/: encounters.json  objects.json
cases/insanity-2/: encounters.json
cases/insanity-3/: encounters.json
cases/many-moon-encounters/: encounters.json  objects.json
cases/moon-slingshot-to-escape-earth/: encounters.json  objects.json
cases/moons-yeet-each-other/: encounters.json
cases/no-encounters/: objects.json
cases/two-moons-varied-encounters/: encounters.json  objects.json
cases/two-moons-varied-encounters-2/: encounters.json  objects.json
src/: bisection.rs  case.rs  constants.rs  headless.rs  main.rs  object.rs  solver.rs  state.rs  util.rs
src/object/: orbit.rs
src/object/orbit/: orbit_point.rs  scary_math.rs
src/object/orbit/conic/: ellipse.rs  hyperbola.rs
src/object/orbit/scary_math/: kepler_ellipse.rs  kepler_hyperbola.rs
src/solver/: encounter.rs
